--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <div class="column-container">
     <div class="column">
       <div class="container left">
-        <div class="counter-container">Cheese: <span id="coffee_counter">0</span></div>
-        <div class="cps-container"><span id="cps">0</span> cheese/second</div>
+        <div class="counter-container">Cheese: <span id="cheese_counter">0</span></div>
+        <div class="cps-container"><span id="cps">0</span> Cheese/Second</div>
         <div id="big_cheese">🧀</div>
       </div>
     </div>
     <div class="column">
-      <div class="column-header">Cheese Producers</div>
+      <div class="column-header">Cheese Store</div>
       <div class="container right" id="producer_container">
       </div>
     </div>
