--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
+  <div class="game-name">
+    Cheese Clicker Game
+  </div>
+  <div class = 'game-description'>Click the cheese to make more cheese then buy helpers from the cheese store to expand your cheese empire!</div>
   <div class="column-container">
+    
     <div class="column">
       <div class="container left">
         <div class="counter-container">Cheese: <span id="cheese_counter">0</span></div>
@@ -18,7 +23,9 @@
     </div>
     <div class="column">
       <div class="column-header">Cheese Store</div>
+      
       <div class="container right" id="producer_container">
+
       </div>
     </div>
     <script type="text/javascript" src="data.js"></script>
